Define wt. systems and consts for O = K, int. twice

--- a/macros.tex
+++ b/macros.tex
@@ -18,18 +18,26 @@
 \newcommand*{\tftnorth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_north.pdf}}}
 \newcommand*{\tftwest}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_four_term_west.pdf}}}
 
-\newcommand*{\tot}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_one_term.pdf}}}
+\newcommand*{\totknot}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{topological_one_term.pdf}}}
 
 % T4T and T1T (as sums of singular knots)
 \newcommand{\tftterm}{\mathbf{T4T}}
 \newcommand{\totterm}{\mathbf{T1T}}
 
 % T4T and T1T, DIFF (as relations on invariants)
-\newcommand{\tftinv}{\texttt{T4T}}
-\newcommand{\totinv}{\texttt{T1T}}
-\newcommand{\diffinv}{\texttt{DIFF}}
+\newcommand{\tft}{\texttt{T4T}}
+\newcommand{\tot}{\texttt{T1T}}
+\newcommand{\diff}{\texttt{DIFF}}
 
 % T4T and T1T, DIFF (as relations on singular knots)
-\newcommand{\tftrel}{\texttt{T4T}\ensuremath{^\ast}}
-\newcommand{\totrel}{\texttt{T1T}\ensuremath{^\ast}}
-\newcommand{\diffrel}{\texttt{DIFF}\ensuremath{^\ast}}
+\newcommand{\tftdual}{\texttt{T4T}\ensuremath{^\ast}}
+\newcommand{\totdual}{\texttt{T1T}\ensuremath{^\ast}}
+\newcommand{\diffdual}{\texttt{DIFF}\ensuremath{^\ast}}
+
+% 4T and 1T (as relations on constants of integration)
+\newcommand{\ft}{\texttt{4T}}
+\newcommand{\ot}{\texttt{1T}}
+
+% T4T and T1T, DIFF (as relations on chord diagrams)
+\newcommand{\ftdual}{\texttt{4T}\ensuremath{^\ast}}
+\newcommand{\otrel}{\texttt{1T}\ensuremath{^\ast}}
