--- a/main.tex
+++ b/main.tex
@@ -22,13 +22,14 @@
 
 \pagestyle{chaptersection}
 \include{vassiliev_invariants_and_chord_diagrams}
+\include{combinatorial_integration_of_weight_systems}
 \include{lie_theory_and_jacobi_diagrams}
 \include{jacobi_diagrams_as_a_universal_enveloping_algebra}
 \include{welded_knots_and_arrow_diagrams}
 \include{arrowed_jacobi_diagrams_as_a_universal_enveloping_algebra}
-\include{expansions_and_associators}
-\include{emergent_knotting}
-\include{emergent_welded_associators}
+% \include{expansions_and_associators}
+% \include{emergent_knotting}
+% \include{emergent_welded_associators}
 
 \include{references}
 
