--- a/references.bib
+++ b/references.bib
@@ -152,3 +152,15 @@
 	year = {1996},
 	author = {Ted Stanford},
 }
+
+@article{a-combinatorial-half-integration-from-weight-system-to-vassiliev-knot-invariant,
+	author = {Simon Willerton},
+	Title = {A Combinatorial Half-Integration from Weight System to
+	         Vassiliev Knot Invariant},
+	journal = {Journal of Knot Theory and Its Ramifications},
+	volume = {07},
+	number = {04},
+	pages = {519-526},
+	year = {1998},
+}
+
