Remove old introduction and scaffold comb int

--- a/combinatorial_integration_of_weight_systems.tex
+++ b/combinatorial_integration_of_weight_systems.tex
@@ -1,8 +1,24 @@
 \chapter{Combinatoral integration of weight systems}
 \label{ch:combinatorial-integration_of_weight_systems}
 
+\begin{mdframed}
+	See the /.tex comments about questions I still have about this section.
+\end{mdframed}
+
+% NOTE:
+% [Hutchings]: "The concern of this paper is determining when [secondary obstructions] vanish" (p. 4).
+% i.e. for braids: secondary obstructions vanish => any singular braid invariant obeying T4T, T1T integrates fully.
+% ...
+% [Willerton]: First note the following:
+%	Properties of Kontsevich integral => Every weight system (W) is the (mth) derivative of a Vassiliev invariant.
+%	i.e. Let the Vassiliev invariant be the W of Z (with lower and higher order terms zero). The derivative is W.
+% But we can also prove such a fact ``directly'' by integration: by finding all the weight systems and setting them to zero.
+% ...
+% It would be sensible if the Hutchings implication went both ways. i.e. If any invariant satisfying the primary obstructions
+% integrates fully, surely it means the secondary obstructions are zero. What does our partial result say about the secondart obstructions?
+
 \section{Willerton's ``half''-integration}
 
-\section{``Three-quarters'' integration}
+\section{A little more that half}
 
 \section{Third subsection}
