Scaffold universal finite type invariants / homomorphic exp.

--- a/combinatorial_integration_of_weight_systems.tex
+++ b/combinatorial_integration_of_weight_systems.tex
@@ -2,7 +2,7 @@
 \label{ch:combinatorial-integration_of_weight_systems}
 
 \begin{mdframed}
-	See the /.tex comments about questions I still have about this section.
+	See the .tex comments about questions I still have about this section. (some now answered)
 \end{mdframed}
 
 % NOTE:
@@ -12,6 +12,7 @@
 % [Willerton]: First note the following:
 %	Properties of Kontsevich integral => Every weight system (W) is the (mth) derivative of a Vassiliev invariant.
 %	i.e. Let the Vassiliev invariant be the W of Z (with lower and higher order terms zero). The derivative is W.
+%	i.e. This is the Kontsevich theorem / FTVI
 % But we can also prove such a fact ``directly'' by integration: by finding all the weight systems and setting them to zero.
 % ...
 % It would be sensible if the Hutchings implication went both ways. i.e. If any invariant satisfying the primary obstructions
@@ -19,6 +20,6 @@
 
 \section{Willerton's ``half''-integration}
 
-\section{A little more that half}
+\section{Setting some more of the constants}
 
-\section{Third subsection}
+\section{Computational analysis}
